--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SMVHingpit - Company Portal</title>
+  <title> SMVHingpit Home Space </title>
   <style>
     body {
       margin: 0;
@@ -16,11 +16,23 @@
     header {
       background: rgba(0, 0, 0, 0.6);
       padding: 20px;
-      font-size: 24px;
+      font-size: 26px;
       font-weight: bold;
     }
     main {
       margin-top: 100px;
+    }
+    h1 {
+      font-size: 36px;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+    }
+    p {
+      font-size: 18px;
+      max-width: 600px;
+      margin: auto;
+      background: rgba(0,0,0,0.5);
+      padding: 15px;
+      border-radius: 8px;
     }
     .button {
       padding: 15px 30px;
@@ -31,6 +43,7 @@
       border-radius: 8px;
       cursor: pointer;
       margin-top: 20px;
+      box-shadow: 2px 2px 6px rgba(0,0,0,0.4);
     }
     .button:hover {
       background: #0056b3;
@@ -47,22 +60,25 @@
 </head>
 <body>
   <header>
-    Welcome to SMVHingpit Company Portal
+    SMVHingpit Portal
   </header>
 
   <main>
-    <h1>📢 Announcements & Updates</h1>
-    <p>Welcome to the official portal of SMVHingpit.  
-       Stay updated with the latest news and access your payroll securely.</p>
+    <h1>📢 Welcome to our space! We are excited  to share what we do and help you find exactly what you're looking for, Dive in and see what awaits!.</h1>
+    <p>
+      This is the official my Official Home Space of SMVHingpit.  
+      Here you can check announcements and securely access your personal DATO's.
+    </p>
 
     <!-- Payroll Login Button -->
     <a href="YOUR_APPS_SCRIPT_WEB_APP_URL" target="_blank">
-      <button class="button">Employee Payroll Login</button>
+      <button class="button">🔑 COS Dashboard Login</button>
     </a>
   </main>
 
   <footer>
-    &copy; 2025 SMVHingpit. All rights reserved.
+    &copy; 2025 SMVH Masterpiece | Built with ❤️. All rights reserved.
   </footer>
 </body>
 </html>
+
