--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <section class="hero">
     <h1>Welcome to my Space!</h1>
     <p>We are excited to share what we do and help you find exactly what you're looking for.  
-    Let's dive in and see what awaits ✨.</p>
+    Let's dive in and see what awaits.</p>
 
     <div class="card">
       <p>This is my space that I built with Love  <b>❤️SMVHingpit❤️</b>.  
@@ -100,8 +100,8 @@
 
       <!-- Buttons -->
       <a href="YOUR_COS_DASHBOARD_URL" class="btn">🔑 COS Dashboard Login</a>
-      <a href="YOUR_MLBUSINESS_URL" class="btn">📊 ML Business Login</a>
-      <a href="YOUR_COM&BEN_DASHBAORD_URL" class="btn">📊 COM&BEN Dashbaord Login</a>
+      <a href="YOUR_MLBUSINESS_URL" class="btn">📊 F@ML Business Login</a>
+      <a href="YOUR_COM&BEN_DASHBAORD_URL" class="btn">📊 COM&BEN Dashboard Login</a>
     </div>
   </section>
 
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
