--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
       Here you can check announcements and securely access your personal DATO's.</p>
 
       <!-- Buttons -->
-      <a href="YOUR_COS_DASHBOARD_URL" class="btn">🔑 COS Dashboard Login</a>
-      <a href="YOUR_MLBUSINESS_URL" class="btn">📊 F@ML Business Login</a>
-      <a href="YOUR_COM&BEN_DASHBAORD_URL" class="btn">📊 COM&BEN Dashboard Login</a>
-    </div>
+      <a href="https://script.google.com/macros/s/AKfycbxO3gp9zCAbeCrvrfAPjKZ1xWl4_RkRPDg1dDmTYStP/dev" class="btn">🔑 COS Dashboard Login</a>
+      <a href="https://script.google.com/macros/s/AKfycbwoYoWw_ENZyzRl-rNdnjrVqLaWRUqrHSBehyeihws/dev" class="btn">📊 F@ML Business Login</a>
+      <a href="YOUR_COMBEN_URL" class="btn">📂 Com&Ben Dashboard</a>
+
   </section>
 
   <footer>
@@ -111,4 +111,5 @@
 
 </body>
 </html>
+
 
