--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SMVHingpit Portal</title>
+  <title>SMVH Portal</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -94,7 +94,7 @@
 </head>
 <body>
 
-  <header>🌿 Welcome to SMVHingpit</header>
+  <header>🌿 Welcome to my Space!</header>
 
   <section id="about">
     <h2>About Me</h2>
@@ -104,8 +104,8 @@
 
   <section id="business">
     <h2>Our Business</h2>
-    <p>We specialize in Payroll Systems, ML Business, and Com&Ben Dashboard.  
-    Our goal is to empower employees, create efficiency, and build trust.</p>
+    <p>We specialize in Payroll Systems, Tracking and Monitoring Company's Business, Com&Ben Dashboard and many more!!!. We do what you asked for!, and lets do this together....  
+    Our goal is to EMPOWER everyone, create EFFICIENCY, and build TRUST.</p>
   </section>
 
   <section id="passion">
@@ -137,3 +137,4 @@
 
 </body>
 </html>
+
