--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <section id="business">
     <h2>Our Business</h2>
-    <p>We specialize in Payroll Systems, Tracking and Monitoring Company's Business, Com&Ben Dashboard and many more!!!. We do what you asked for!, and lets do this together....  
+    <p>We versatile professional who provides remote administrative support and helps business operations for companies, entrepreneurs, and small business owners to ensure tasks are efficiently managed while saving valuable time and resources. This role is valuable in today's high tech's world where businesses need flexible and cost-effective solutions to keep operations running smoothly...We specialize in Tracking and Monitoring Company's Business, Payroll Systems and many more!!!. We do what you asked for!, and lets do this together....  
     Our goal is to EMPOWER everyone, create EFFICIENCY, and build TRUST.</p>
   </section>
 
@@ -137,4 +137,5 @@
 
 </body>
 </html>
+
 
