--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
   <!-- Hidden Menu -->
   <div class="hidden-menu" id="menu">
-    <a href="YOUR_COS_DASHBOARD_URL">🔑 COS Dashboard</a>
-    <a href="YOUR_MLBUSINESS_URL">📊 ML Business</a>
+    <a href="https://script.google.com/macros/s/AKfycbxO3gp9zCAbeCrvrfAPjKZ1xWl4_RkRPDg1dDmTYStP/dev">🔑 COS Dashboard</a>
+    <a href="https://script.google.com/macros/s/AKfycbwoYoWw_ENZyzRl-rNdnjrVqLaWRUqrHSBehyeihws/dev">📊 ML Business</a>
     <a href="YOUR_COMBEN_URL">📂 Com&Ben Dashboard</a>
   </div>
 
@@ -137,5 +137,6 @@
 
 </body>
 </html>
+
 
 
