--- a/index.html
+++ b/index.html
@@ -51,16 +51,19 @@
     }
 
     /* Hero Section */
-    .hero {
-      height: 100vh;
-      background: linear-gradient(135deg, #a8edea, #fed6e3);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 0 20px;
-    }
+   .hero {
+  height: 100vh;
+  background: 
+    linear-gradient(135deg, rgba(168, 237, 234, 0.7), rgba(254, 214, 227, 0.7)),
+    url("e77c4816-7fb3-4145-8d86-578e1cb75933.png") no-repeat center center/cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 20px;
+}
+
 
     .hero h1 {
       font-size: 4rem;
@@ -167,3 +170,4 @@
   </footer>
 </body>
 </html>
+
